# sql_fixit_rl_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
server/: __init__.py  sql_debug_environment.py
sql_debug_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
sql_debug_env/server/: app.py  demo_environment.py  sql_debug_environment.py
sql_fixit_rl_agent/: __init__.py  client.py  openenv.yaml
sql_fixit_rl_agent/server/: app.py
